[package]
name = "auto-tag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.52", features = ["backtrace"] }
clap = { version = "3.1.18", features = ["derive"] }
git2 = "0.14.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
toml = "0.5.8"
walkdir = "2.3.2"

[features]

[package.metadata.auto-tag]
enabled = true

[profile.release]
strip = "debuginfo"
